outputs_20260402-095956-87e275f3/codegen/production/build_logs/compiler_stderr.log
In file included from /tmp/tdd_build_nutw005d/src/egtm_atom_3_phase_inverter_pwm.c:18:
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:165:5: error: redeclaration of enumerator ‘IfxEgtm_Cluster_0’
  165 |     IfxEgtm_Cluster_0 = 0,
      |     ^~~~~~~~~~~~~~~~~
In file included from /tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:4:
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:16: note: previous definition of ‘IfxEgtm_Cluster_0’ with type ‘enum <anonymous>’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:166:5: error: redeclaration of enumerator ‘IfxEgtm_Cluster_1’
  166 |     IfxEgtm_Cluster_1 = 1,
      |     ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:39: note: previous definition of ‘IfxEgtm_Cluster_1’ with type ‘enum <anonymous>’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                                       ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:167:5: error: redeclaration of enumerator ‘IfxEgtm_Cluster_2’
  167 |     IfxEgtm_Cluster_2 = 2
      |     ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:62: note: previous definition of ‘IfxEgtm_Cluster_2’ with type ‘enum <anonymous>’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                                                              ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:168:3: error: conflicting types for ‘IfxEgtm_Cluster’; have ‘enum <anonymous>’
  168 | } IfxEgtm_Cluster;
      |   ^~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:86: note: previous declaration of ‘IfxEgtm_Cluster’ with type ‘IfxEgtm_Cluster’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                                                                                      ^~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/src/egtm_atom_3_phase_inverter_pwm.c:23:10: fatal error: IfxAdc_Tmadc.h: No such file or directory
   23 | #include "IfxAdc_Tmadc.h"    /* For Ifx_ADC_TMADC / IfxAdc_TmadcResultReg types                 */
      |          ^~~~~~~~~~~~~~~~
compilation terminated.

In file included from /tmp/tdd_build_nutw005d/mocks/mock_egtm_atom_3_phase_inverter_pwm.c:5:
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:165:5: error: redeclaration of enumerator ‘IfxEgtm_Cluster_0’
  165 |     IfxEgtm_Cluster_0 = 0,
      |     ^~~~~~~~~~~~~~~~~
In file included from /tmp/tdd_build_nutw005d/mocks/mock_egtm_atom_3_phase_inverter_pwm.c:3:
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:16: note: previous definition of ‘IfxEgtm_Cluster_0’ with type ‘enum <anonymous>’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:166:5: error: redeclaration of enumerator ‘IfxEgtm_Cluster_1’
  166 |     IfxEgtm_Cluster_1 = 1,
      |     ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:39: note: previous definition of ‘IfxEgtm_Cluster_1’ with type ‘enum <anonymous>’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                                       ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:167:5: error: redeclaration of enumerator ‘IfxEgtm_Cluster_2’
  167 |     IfxEgtm_Cluster_2 = 2
      |     ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:62: note: previous definition of ‘IfxEgtm_Cluster_2’ with type ‘enum <anonymous>’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                                                              ^~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm_Pwm.h:168:3: error: conflicting types for ‘IfxEgtm_Cluster’; have ‘enum <anonymous>’
  168 | } IfxEgtm_Cluster;
      |   ^~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/IfxEgtm.h:16:86: note: previous declaration of ‘IfxEgtm_Cluster’ with type ‘IfxEgtm_Cluster’
   16 | typedef enum { IfxEgtm_Cluster_0 = 0, IfxEgtm_Cluster_1 = 1, IfxEgtm_Cluster_2 = 2 } IfxEgtm_Cluster;
      |                                                                                      ^~~~~~~~~~~~~~~

/tmp/tdd_build_nutw005d/test/test_egtm_atom_3_phase_inverter_pwm.c:23:16: error: conflicting types for ‘mock_IfxEgtm_Pwm_init_callCount’; have ‘uint32’ {aka ‘unsigned int’}
   23 | extern uint32  mock_IfxEgtm_Pwm_init_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /tmp/tdd_build_nutw005d/test/test_egtm_atom_3_phase_inverter_pwm.c:2:
/tmp/tdd_build_nutw005d/include/mock_egtm_atom_3_phase_inverter_pwm.h:74:17: note: previous declaration of ‘mock_IfxEgtm_Pwm_init_callCount’ with type ‘int’
   74 | extern int      mock_IfxEgtm_Pwm_init_callCount;
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/test/test_egtm_atom_3_phase_inverter_pwm.c:24:16: error: conflicting types for ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’; have ‘uint32’ {aka ‘unsigned int’}
   24 | extern uint32  mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_nutw005d/include/mock_egtm_atom_3_phase_inverter_pwm.h:114:17: note: previous declaration of ‘mock_IfxEgtm_Trigger_trigToAdc_callCount’ with type ‘int’
  114 | extern int      mock_IfxEgtm_Trigger_trigToAdc_callCount;
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
